# advbox

./: .gitignore  LICENSE  README.md  configure.sh  makefile.in  meson.build
src/: calcx.cpp  colors.rs  countdown.c  dateadd.cpp  datediff.rs  dirsize.cpp  estimate.rs  extract.rs  ftree.rs  killport.rs  lanlist.cpp  notes.cpp  progress.c  randnum.c  selfkill.c  sysinfo.c  tzconvert.cpp
src/calcx/: calcx.cpp  meson.build
src/colors/: colors.rs  meson.build
src/countdown/: countdown.c  meson.build
src/dateadd/: dateadd.cpp  meson.build
src/datediff/: datediff.rs  meson.build
src/dirsize/: dirsize.cpp  meson.build
src/estimate/: estimate.rs  meson.build
src/extract/: extract.rs  meson.build
src/ftree/: ftree.rs  meson.build
src/killport/: killport.rs  meson.build
src/lanlist/: lanlist.cpp  meson.build
src/notes/: meson.build  notes.cpp
src/progress/: meson.build  progress.c
src/randnum/: meson.build  randnum.c
src/selfkill/: meson.build  selfkill.c
src/sysinfo/: meson.build  sysinfo.c
src/tzconvert/: meson.build  tzconvert.cpp
