project(
  'advbox',
  ['c', 'cpp'],
  version: '1.0.0',
  license: 'MIT',
  default_options: [
    'c_std=c99',
    'cpp_std=c++17',
    'warning_level=2',
    'optimization=2',
  ],
)

subdir('src/calcx')
subdir('src/colors')
subdir('src/countdown')
subdir('src/dateadd')
subdir('src/datediff')
subdir('src/dirsize')
subdir('src/estimate')
subdir('src/ftree')
subdir('src/killport')
subdir('src/lanlist')
subdir('src/notes')
subdir('src/progress')
subdir('src/randnum')
subdir('src/selfkill')
subdir('src/sysinfo')
subdir('src/extract')
subdir('src/tzconvert')
